<resources>
    <string name="app_name">Blues Soundboard</string>
    <string name="goal_horn">GOAL HORN</string>
    <string name="play_gloria">PLAY GLORIA!!</string>
    <string name="stop">STOP</string>
    <string name="power_play">Power Play</string>
    <string name="placeholder">Placeholder</string>
    <string name="buffalo_head">Buffalo Head</string>
    <string name="created_by">created by Mitch Miller</string>
    <string name="win_a_game">Win A Game</string>
    <string name="turbulence">Turbulence</string>
    <string name="clip_image_cd">clip image</string>
    <string name="search_hint">search</string>
</resources>
