<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/stl_navy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:id="@+id/blues_image"
            android:layout_alignParentTop="true"
            android:src="@drawable/blues_trumpet"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="64dp"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

    <Button
            android:id="@+id/win_a_game_button"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/win_a_game"
            android:textSize="20sp"
            android:background="@drawable/button_bg"
            android:textColor="@color/stl_yellow"
            android:layout_above="@+id/play_gloria_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>

    <Button
            android:id="@+id/play_gloria_button"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@+id/anchor"
            android:text="@string/play_gloria"
            android:textSize="20sp"
            android:background="@drawable/button_bg"
            android:textColor="@color/stl_yellow"
            android:layout_above="@+id/anchor"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>

    <Button
            android:id="@+id/power_play_button"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/anchor"
            android:text="@string/power_play"
            android:textSize="20sp"
            android:background="@drawable/button_bg"
            android:textColor="@color/stl_yellow"
            android:layout_above="@+id/anchor"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>

    <View
            android:id="@+id/anchor"
            android:layout_centerInParent="true"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

    <Button
            android:id="@+id/goal_horn"
            android:text="@string/goal_horn"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_bg"
            android:textColor="@color/stl_yellow"
            android:layout_toStartOf="@+id/anchor"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_below="@+id/anchor"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>

    <Button
            android:id="@+id/placeholder"
            android:text="@string/buffalo_head"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_bg"
            android:textColor="@color/stl_yellow"
            android:layout_toEndOf="@+id/anchor"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_below="@+id/anchor"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>

    <Button
            android:id="@+id/stop_button"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/stop_button_bg"
            android:textColor="@color/stl_white"
            android:text="@string/stop"
            android:layout_marginBottom="32dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"/>

    <TextView
            android:id="@+id/created_by"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/stl_white"
            android:textSize="12sp"
            android:text="@string/created_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>